syntax = "proto3";

package calculator;
import "greeter.proto";
import "farewell/farewell.proto";


option go_package = "/proto/gen;mainapipb";

service Calculator {
    rpc Add (AddRequest) returns (AddResponse);
}
 
service Greeter {
    rpc Greet (HelloRequest) returns (HelloResponse);
}

service BidFarewell {
    rpc BidGoodBye(farewell.GoodByeRequest) returns (farewell.GoodByeResponse);
}

message AddRequest {
    int32 a = 1;
    int32 b = 2;
}

message AddResponse {
    int32 sum = 1;
}


